<resources>
    <string name="app_name">BasicPay</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">BasicPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Basic Pay</string>
    <string name="nav_header_subtitle">by FIS</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="select_payment">Select Payment Mode</string>
    <string name="find_nearby_merchants">Find Nearby Merchants</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_merchant_payid">Search Merchant by PayID</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">LogIn</string>
    <string name="title_activity_mer_list">Choose Merchant</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="fetching_location">Fetching Location</string>
    <string name="description">Description</string>
    <string name="Payment">Make Payment</string>
    <string name="amount">000000000000</string>
    <string name="recipient">Recipient</string>
    <string name="scan_pay">Scan QR Code</string>
    <string name="recipient_name">Recipient name</string>
    <string name="user_name">User Name</string>
    <string name="paying_to">Paying To</string>
    <string name="header0810">0029</string>
    <string name="header0800">002F</string>
    <string name="header0200">00F2</string>
    <string name="header0820">0027</string>

</resources>
