<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranDetActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5ADC50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/payingto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/paying_to"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recipient_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/amounText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="Enter transaction amount"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/amount"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/descText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="Enter transaction description"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/Payment"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
