<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5ADC50"
    tools:context=".SelectRecipActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/latitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/longitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/recip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:backgroundTint="#4CAF50"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:backgroundTint="#4CAF50"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/recip10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/recipient"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fetching_location"
        android:enabled="false"
        android:progressTint="#4CAF50"
        android:text="@string/fetching_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/fetching_location"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
